# rust_api_template

./: .gitignore  Cargo.toml  README.md  tree.tree
.github/: copilot-instructions.md
docs/: README_query_builder_util.md  README_repository_trait.md  log.json  querybuilder-readme.md
migrations/: 20240520000000_create_users_table.sql  20240530000000_create_users_table.sql
scripts/: README.md  generate_feature.sh
src/: main.rs
src/api/: mod.rs  swagger.rs
src/api/auth/: auth_controller.rs  mod.rs
src/api/health/: health_controller.rs  mod.rs
src/api/protected/: mod.rs
src/api/protected/user/: mod.rs  user_controller.rs
src/config/: config.rs  mod.rs  models.rs  server.rs
src/core/: mod.rs
src/core/base/: generic_middleware.rs  mod.rs
src/core/base/extension/: mod.rs  query_result_extension.rs
src/core/base/generic_repository/: entry_trait.rs  mod.rs  repository_trait.rs  repository_utils.rs
src/core/base/query_builder/: generic_query_builder.rs  mod.rs  parameterizedQuery.rs  parameterized_query.rs  query_builder.rs  query_models.rs
src/core/errors/: errors.rs
src/core/middlewares/: logger.rs  logging.rs  mod.rs  rate_limiter.rs
src/core/utils/: helpers.rs  image.rs  mod.rs  query_builder.rs
src/db/: connection.rs
src/db/models/: user.rs
src/db/repositories/: user_repository.rs
src/modules/auth/: auth_helpers.rs  auth_middleware.rs  auth_models.rs  auth_service.rs  mod.rs
src/modules/user/: mod.rs  user_models.rs  user_service.rs
tests/api/: users_api_test.rs
tests/common/: mod.rs
tests/integration/: users_test.rs
