[package]
name = "rust_api_template"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-multipart = "0.7.2"
image = "0.25.8"
tokio = { version = "1.47.0", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
anyhow = "1.0.98"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
actix-cors = "0.7.1"
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
validator = { version = "0.20.0", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
lazy_static = "1.5.0"


[features]
openapi = []
