[package]
name = "rust_api_template"
version = "0.1.0"
edition = "2024"

[dependencies]
# actix
actix-web = "4.11.0"
actix-multipart = "0.7.2"
actix-cors = "0.7.1"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
# database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
# async
tokio = { version = "1.47.1", features = ["full"] }
lazy_static = "1.5.0"

# utilities
image = "0.25.8"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
jsonwebtoken = "9.3.1"
bcrypt = "0.17.1"
validator = { version = "0.20.0", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid", "chrono"] }


[features]
openapi = []
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]